<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mypackage.lab5_2_runtracker.MainActivity"
    android:background="@android:color/holo_green_dark">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1">

            <TextView
                android:text="@string/start_view"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:id="@+id/textView1"
                android:textColor="@android:color/background_light"
                android:textSize="24sp" />

            <TextView
                android:text=""
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:id="@+id/textView2" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1" >

            <TextView
                android:text="@string/latitude_view"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:id="@+id/textView3"
                android:textColor="@android:color/background_light"
                android:textSize="24sp" />

            <TextView
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:id="@+id/textView4" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1" >
            <TextView
                android:text="@string/longitude_view"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:id="@+id/textView5" />

            <TextView
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:id="@+id/textView6" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1" >
            <TextView
                android:text="@string/altitude_view"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:id="@+id/textView7" />

            <TextView
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:id="@+id/textView8" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1" >

            <TextView
                android:text="@string/elapsed_view"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:id="@+id/textView9" />

            <TextView
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:id="@+id/textView10" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1" >

            <Button
                android:text="@string/start_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/button1"
                android:layout_weight="1"
                android:textSize="24sp"
                android:textAlignment="center"
                android:textColor="@android:color/background_light"
                android:textStyle="bold" />

            <Button
                android:text="@string/stop_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/button2"
                android:layout_weight="1"
                android:textColor="@android:color/background_light"
                android:textSize="24sp"
                android:textAlignment="center"
                android:typeface="normal"
                android:textStyle="bold" />


        </TableRow>
        <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5" />
    </TableLayout>
</RelativeLayout>
